--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "eslint": "^8.50.0",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-vue": "^9.17.0",
     "moment": "^2.29.4",
-    "vue": "^2.7.14"
+    "ripple": "^0.1.2",
+    "vue": "^2.7.14",
+    "vue-ripple-directive": "^2.0.1",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -21,8 +27,6 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
